# asteroid-flashlight

./: CMakeLists.txt  README.md  asteroid-flashlight.desktop.template  asteroid-flashlight.in  asteroid-flashlight.pro  main.qml
i18n/: asteroid-flashlight.ar_AR.ts  asteroid-flashlight.ast.ts  asteroid-flashlight.az.ts  asteroid-flashlight.be.ts  asteroid-flashlight.bqi.ts  asteroid-flashlight.cs.ts  asteroid-flashlight.da.ts  asteroid-flashlight.de_DE.ts  asteroid-flashlight.desktop.h  asteroid-flashlight.desktop.h.ts  asteroid-flashlight.el.ts  asteroid-flashlight.en_GB.ts  asteroid-flashlight.eo.ts  asteroid-flashlight.es.ts  asteroid-flashlight.es_AR.ts  asteroid-flashlight.fa.ts  asteroid-flashlight.fi.ts  asteroid-flashlight.fr.ts  asteroid-flashlight.gl.ts  asteroid-flashlight.he.ts  asteroid-flashlight.hi.ts  asteroid-flashlight.hr.ts  asteroid-flashlight.hu.ts  asteroid-flashlight.ia.ts  asteroid-flashlight.id.ts  asteroid-flashlight.isv.ts  asteroid-flashlight.it.ts  asteroid-flashlight.ja.ts  asteroid-flashlight.ka.ts  asteroid-flashlight.kab.ts  asteroid-flashlight.ko.ts  asteroid-flashlight.lb.ts  asteroid-flashlight.lt.ts  asteroid-flashlight.mr.ts  asteroid-flashlight.ms.ts  asteroid-flashlight.nb_NO.ts  asteroid-flashlight.nl_BE.ts  asteroid-flashlight.nl_NL.ts  asteroid-flashlight.oc.ts  asteroid-flashlight.pl.ts  (+21 more)
src/: AppShell.qml  BannerScroll.qml  CMakeLists.txt  ValueCycler.qml  beacon.qml  flashlight.qml  main.qml  message.qml  resources.qrc  strobe.qml
